fix: scaling on mobile displays (#81)
* WIP! Buttons look better than before on mobile, but still not perfect
Changed from visibility:hidden to display:none for toggling snackbar

* WIP! Media query breakpoints change layout of buttons

* Adjusted media queries and cleaned up

* Changed snackbar position to bottom
Prevented accidental selection of snackbar close button

* Updated embed button onclick text

--- a/packages/demo/src/style.css
+++ b/packages/demo/src/style.css
@@ -1,6 +1,6 @@
 header {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: center;
 	flex-wrap: wrap;
 }
@@ -24,18 +24,46 @@ video {
 .input-buttons {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.autoplay-wrapper {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 	align-items: center;
 }
 
-.input-buttons button,
-.input-buttons div {
-	width: 100%;
-	margin-right: 1rem;
-	text-transform: uppercase;
+.input-section .input-buttons .input-button, .input-section .input-buttons .autoplay-wrapper {
+	font-size: 1em;
+	width: 10em;
+	margin: 0.5em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-width: 5.5em;
 }
 
-.input-buttons button:last-child {
-	margin-right: 0;
+@media (max-width: 790px) {
+	.input-section .input-buttons .input-button, .input-section .input-buttons .autoplay-wrapper {
+		width: 47%;
+	}
+}
+@media (max-width: 615px) {
+	.input-section .input-buttons .input-button, .input-section .input-buttons .autoplay-wrapper {
+		width: 44%;
+	}
+}
+@media (max-width: 340px) {
+	.input-section .input-buttons .input-button, .input-section .input-buttons .autoplay-wrapper {
+		width: 100%;
+		height: 2.15em;
+	}
+}
+
+.autoplay-wrapper input, .autoplay-wrapper label {
+	margin: 0;
+	padding: 0.2em 0.25em;
 }
 
 #ui-container {
@@ -44,47 +72,47 @@ video {
 
 #example-streams button {
 	margin-right: 3px;
+	margin-top: 1px;
 }
 
 #snackbar {
-	visibility: hidden;
-	min-width: 250px;
-	max-width: 60%;
+	display: none;
+	box-sizing: border-box;
 	background-color: #0070F3;
 	color: #fff;
 	border-radius: 4px;
 	padding: 16px;
-	position: absolute;
+	position: relative;
 	z-index: 1;
-	top: 0;
-	margin-left: 101%;
-	margin-right: 1%;
 	font-family: 'Courier New', Courier, monospace;
+	box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12); 
 }
 
 #snackbar-close-button {
 	position: absolute;
 	top: 0;
 	right: 0;
-	margin-bottom: 100px;
+	/* Prevents accidentally selecting the close-button when copying code snippet*/
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 /* Show the snackbar when clicking on a button (class added with JavaScript) */
 #snackbar.show {
-	visibility: visible;
+	display: block;
 	/* Add animation: Take 0.5 seconds to fade in the snackbar.*/
 	-webkit-animation: fadein 0.5s;
 	animation: fadein 0.5s;
 }
 
-/* Animations to fade in the snackbar*/
+/* Animation to fade in the snackbar*/
 @keyframes fadein {
 	from {
 		opacity: 0;
-		left:-1%;
 	}
 	to {
 		opacity: 1;
-		left: 0;
 	}
 }
